bookmark container issue fixed

--- a/index.html
+++ b/index.html
@@ -946,6 +946,15 @@
                         </button>
                     </div>
                     <div class="modal-body">
+                        <div class="saved-chats-search-container">
+                            <div class="search-input-wrapper">
+                                <i class="fas fa-search search-icon"></i>
+                                <input type="text" id="savedChatsSearchInput" placeholder="Search conversations..." class="saved-chats-search-input">
+                                <button class="clear-search-btn" id="clearSavedChatsSearch" style="display: none;">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </div>
+                        </div>
                         <div class="saved-chats-list" id="savedChatsList">
                             <!-- Saved chats will be populated here -->
                         </div>
