--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SATI ChatBot - Your Institute Guide</title>
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
-    <link rel="canonical" href="https://sati-chatbot.vercel.app/">
+    <link rel="canonical" href="https://redoing-chatbot.vercel.app/">
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="SATI ChatBot - Your Institute Guide">
@@ -21,11 +21,11 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sati-chatbot.vercel.app/">
+    <meta property="og:url" content="https://redoing-chatbot.vercel.app/">
     <meta property="og:title" content="SATI ChatBot - Your Institute Guide">
     <meta property="og:description"
         content="Get instant answers about SATI Vidisha - admissions, courses, placements, hostel facilities, and more. Your intelligent AI assistant for Samrat Ashok Technological Institute.">
-    <meta property="og:image" content="https://sati-chatbot.vercel.app/images/preview.png">
+    <meta property="og:image" content="https://redoing-chatbot.vercel.app/images/preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="SATI ChatBot">
@@ -33,11 +33,11 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://sati-chatbot.vercel.app/">
+    <meta name="twitter:url" content="https://redoing-chatbot.vercel.app/">
     <meta name="twitter:title" content="SATI ChatBot - Your Institute Guide">
     <meta name="twitter:description"
         content="Get instant answers about SATI Vidisha - admissions, courses, placements, hostel facilities, and more.">
-    <meta name="twitter:image" content="https://sati-chatbot.vercel.app/images/preview.png">
+    <meta name="twitter:image" content="https://redoing-chatbot.vercel.app/images/preview.png">
 
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#1a1a1a">
@@ -89,7 +89,7 @@
         "name": "SATI ChatBot",
         "alternateName": "SATI AI Assistant",
         "description": "AI-powered chatbot providing comprehensive information about Samrat Ashok Technological Institute (SATI), Vidisha. Get instant answers about admissions, courses, placements, facilities, and more.",
-        "url": "https://sati-chatbot.vercel.app/",
+        "url": "https://redoing-chatbot.vercel.app/",
         "applicationCategory": "EducationalApplication",
         "operatingSystem": "Web Browser",
         "offers": {
