--- a/index.html
+++ b/index.html
@@ -325,6 +325,12 @@
             <!-- Message Input Area -->
             <div class="input-area">
                 <div class="input-container">
+                    <!-- File chip/tab for attached file -->
+                    <div id="fileChip" class="file-chip" style="display:none;align-items:center;gap:8px;margin-bottom:6px;">
+                        <i class="fas fa-file-alt"></i>
+                        <span id="fileChipName"></span>
+                        <button id="removeFileChipBtn" class="remove-file-chip-btn" title="Remove file" style="background:none;border:none;color:var(--danger-color);font-size:1.1em;cursor:pointer;"><i class="fas fa-times"></i></button>
+                    </div>
                     <div class="input-wrapper">
                         <textarea id="messageInput" placeholder="Ask anything" rows="1" maxlength="2000"></textarea>
                         <div class="input-actions">
