fix(file attachment) : ui improvement : added files display

--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
 
             <!-- Message Input Area -->
             <div class="input-area">
+                <!-- File chip/tab for attached files (now outside input-container) -->
+                <div id="fileChipContainer" style="display:none;"></div>
                 <div class="input-container">
-                    <!-- File chip/tab for attached files -->
-                    <div id="fileChipContainer" style="display:none;flex-wrap:wrap;gap:8px;margin-bottom:6px;"></div>
                     <div class="input-wrapper">
                         <textarea id="messageInput" placeholder="Ask anything" rows="1" maxlength="2000"></textarea>
                         <div class="input-actions">
