--- a/android_client/app/src/main/assets/offline.html
+++ b/android_client/app/src/main/assets/offline.html
@@ -1,28 +1,62 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Offline Mode</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: sans-serif;
-            padding: 20px;
-        }
-        h1 {
-            margin-bottom: 15px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #4CAF50; /* Green */
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Offline Mode</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      background-color: #f5f5f5;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1rem;
+      margin-bottom: 30px;
+      max-width: 90%;
+    }
+
+    button {
+      padding: 12px 24px;
+      font-size: 1rem;
+      background-color: #0f9d7a;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0c7c5f;
+    }
+  </style>
 </head>
 <body>
-    <h1>You're Offline</h1>
-    <p>It seems like you've lost your internet connection. Please check your settings and try again.</p>
+  <h1>You're Offline</h1>
+  <p>It seems like you've lost your internet connection.<br>Please check your connection and try again.</p>
+  <button onclick="retry()">Retry</button>
+
+  <script>
+    function retry() {
+      location.href = "https://sati-chatbot.vercel.app/index.html";
+    }
+  </script>
 </body>
 </html>
