fix(file loader animation fix)

--- a/resources.html
+++ b/resources.html
@@ -274,6 +274,7 @@
                 <h1 id="previewTitle">Object Oriented Programming - Notes</h1>
             </div>
             <div class="preview-container">
+                <div class="loading-overlay" id="loadingOverlay" style="display:none;"></div>
                 <div class="loading-spinner" id="loadingSpinner">
                     <i class="fas fa-spinner fa-spin"></i>
                     <p>Loading preview...</p>
