--- a/android_client/app/src/main/assets/offline.html
+++ b/android_client/app/src/main/assets/offline.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Offline Mode</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Offline</title>
   <style>
     * {
       box-sizing: border-box;
@@ -12,50 +12,64 @@
     html, body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
+      width: 100%;
+      height: 100%;
+      background-color: #121212;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      height: 100vh;
+      align-items: center;
+    }
+
+    .container {
       text-align: center;
-      background-color: #f5f5f5;
+      max-width: 90vw;
+      padding: 2rem;
     }
 
     h1 {
-      font-size: 2rem;
-      margin-bottom: 10px;
+      font-size: 1.8rem;
+      margin-bottom: 0.8rem;
     }
 
     p {
       font-size: 1rem;
-      margin-bottom: 30px;
-      max-width: 90%;
+      margin-bottom: 1.5rem;
+      color: #ccc;
     }
 
     button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: #0f9d7a;
+      background-color: #4caf50;
       color: white;
       border: none;
+      padding: 0.7rem 1.5rem;
+      font-size: 1rem;
       border-radius: 6px;
       cursor: pointer;
+      transition: background-color 0.2s ease;
     }
 
     button:hover {
-      background-color: #0c7c5f;
+      background-color: #43a047;
     }
   </style>
 </head>
 <body>
-  <h1>You're Offline</h1>
-  <p>It seems like you've lost your internet connection.<br>Please check your connection and try again.</p>
-  <button onclick="retry()">Retry</button>
+  <div class="container">
+    <h1>You're Offline</h1>
+    <p>Check your internet connection and try again.</p>
+    <button onclick="retry()">Retry</button>
+  </div>
 
   <script>
     function retry() {
-      location.href = "https://sati-chatbot.vercel.app/index.html";
+      if (typeof Android !== 'undefined' && Android.getLastUrl) {
+        const url = Android.getLastUrl();
+        location.href = url;
+      } else {
+        location.reload();
+      }
     }
   </script>
 </body>
