--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <meta name="description"
         content="Learn about SATI ChatBot - An innovative AI assistant created by Team FluxoNauts to help students and parents get comprehensive information about Samrat Ashok Technological Institute, Vidisha.">
     <meta name="keywords"
-        content="About SATI ChatBot, Team FluxoNauts, AI assistant development, SATI information system, engineering college chatbot, student helper AI, educational technology, Samrat Ashok Technological Institute assistant">
+        content="About SATI-ChatBot, Team FluxoNauts, AI assistant development, SATI information system, engineering college chatbot, student helper AI, educational technology, Samrat Ashok Technological Institute assistant">
     <meta name="author" content="Team FluxoNauts">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
