updates : Readme updated (subrepo added) + added team member contributions in about.html

--- a/about.html
+++ b/about.html
@@ -602,7 +602,7 @@
                     <div class="bottom bottom-u">
                         <div class="content">
                             <span class="name">Utkarsh Vishwakarma</span>
-                            <span class="about-me">Team Member - Backend Development, Database Management</span>
+                            <span class="about-me">Team Member - Backend Development, Database Management , API Integration , SSO Integration</span>
                         </div>
                         <div class="bottom-bottom">
                             <div class="social-links-container">
@@ -642,8 +642,7 @@
                     <div class="bottom bottom-a">
                         <div class="content">
                             <span class="name">Aashutosh Singh Baghel</span>
-                            <span class="about-me">Team Member - Presentator, UI/UX Design and API
-                                Integration</span>
+                            <span class="about-me">Team Member - Presentator, UI/UX Design and Android App dev</span>
                         </div>
                         <div class="bottom-bottom">
                             <div class="social-links-container">
@@ -684,8 +683,7 @@
                     <div class="bottom bottom-h">
                         <div class="content">
                             <span class="name">Hardik Kumar Sinha</span>
-                            <span class="about-me">Team Member - Quality Assurance, Testing, Documentation,
-                                DevOps</span>
+                            <span class="about-me">Team Member - Quality Assurance, Professional Tester, Documentation</span>
                         </div>
                         <div class="bottom-bottom">
                             <div class="social-links-container">
