minute changes on about.html

--- a/about.html
+++ b/about.html
@@ -602,7 +602,7 @@
                     <div class="bottom bottom-u">
                         <div class="content">
                             <span class="name">Utkarsh Vishwakarma</span>
-                            <span class="about-me">Team Member - Backend Development, Database Management , API & SSO Integration</span>
+                            <span class="about-me">Team Member - Backend Development, DB Management , API & SSO Integration</span>
                         </div>
                         <div class="bottom-bottom">
                             <div class="social-links-container">
