--- a/about.html
+++ b/about.html
@@ -602,7 +602,8 @@
                     <div class="bottom bottom-u">
                         <div class="content">
                             <span class="name">Utkarsh Vishwakarma</span>
-                            <span class="about-me">Team Member - Backend Development, DB Management , API & SSO Integration</span>
+                            <span class="about-me">Team Member - Backend Development, DB Management , API & SSO
+                                Integration</span>
                         </div>
                         <div class="bottom-bottom">
                             <div class="social-links-container">
@@ -683,7 +684,8 @@
                     <div class="bottom bottom-h">
                         <div class="content">
                             <span class="name">Hardik Kumar Sinha</span>
-                            <span class="about-me">Team Member - Quality Assurance, Professional Tester, Documentation</span>
+                            <span class="about-me">Team Member - Quality Assurance, Professional Tester,
+                                Documentation</span>
                         </div>
                         <div class="bottom-bottom">
                             <div class="social-links-container">
