--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,9 @@
     <link rel="stylesheet" href="resources.css">
     <link rel="stylesheet" href="contact.css">
 
+    <!-- Glowing Effect Styles -->
+    <link rel="stylesheet" href="glowing-effect.css">
+
     <!-- Google Adsense -->
     <meta name="google-adsense-account" content="ca-pub-1178405148130113">
 
@@ -369,6 +372,9 @@
 
     <script src="script.js"></script>
     <script src="contact.js"></script>
+
+    <!-- Glowing Effect Script -->
+    <script src="glowing-effect.js"></script>
 
 </body>
 
