--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
     <!-- Your custom styles -->
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Glowing Effect Styles -->
+    <link rel="stylesheet" href="glowing-effect.css">
 
     <!-- Cool Mode Effect -->
     <script src="cool-mode.js"></script>
@@ -141,6 +143,9 @@
 
     <!-- API Integration -->
     <script src="api-integration.js"></script>
+
+    <!-- Glowing Effect Script -->
+    <script src="glowing-effect.js"></script>
 
     <!-- Prevent theme flash by applying theme immediately -->
     <script>
