--- a/index.html
+++ b/index.html
@@ -335,10 +335,18 @@
                     <div class="input-wrapper">
                         <textarea id="messageInput" placeholder="Ask anything" rows="1" maxlength="2000"></textarea>
                         <div class="input-actions">
-                            <button class="attachment-btn" id="attachmentBtn" title="Attach file">
-                                <i class="fas fa-paperclip"></i>
-                            </button>
-                            <input type="file" id="txtFileInput" accept=".txt" multiple style="display:none" />
+                            <div class="input-actions-left">
+                                <button class="attachment-btn" id="attachmentBtn" title="Attach file">
+                                    <i class="fas fa-paperclip"></i>
+                                </button>
+                                <input type="file" id="txtFileInput" accept=".txt" multiple style="display:none" />
+                                <!-- Voice mode button for mobile - positioned between attach and model select -->
+                                <button class="voice-mode-btn mobile-voice-btn" id="voiceModeBtnMobile" title="Voice mode" style="display: none;">
+                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                                        <path d="M7.33496 15.5V4.5C7.33496 4.13275 7.63275 3.83499 8 3.83496C8.36727 3.83496 8.66504 4.13273 8.66504 4.5V15.5C8.66504 15.8673 8.36727 16.165 8 16.165C7.63275 16.165 7.33496 15.8673 7.33496 15.5ZM11.335 13.1309V7.20801C11.335 6.84075 11.6327 6.54298 12 6.54297C12.3673 6.54297 12.665 6.84074 12.665 7.20801V13.1309C12.665 13.4981 12.3672 13.7959 12 13.7959C11.6328 13.7959 11.335 13.4981 11.335 13.1309ZM3.33496 11.3535V8.81543C3.33496 8.44816 3.63273 8.15039 4 8.15039C4.36727 8.15039 4.66504 8.44816 4.66504 8.81543V11.3535C4.66504 11.7208 4.36727 12.0186 4 12.0186C3.63273 12.0186 3.33496 11.7208 3.33496 11.3535ZM15.335 11.3535V8.81543C15.335 8.44816 15.6327 8.15039 16 8.15039C16.3673 8.15039 16.665 8.44816 16.665 8.81543V11.3535C16.665 11.7208 16.3673 12.0186 16 12.0186C15.6327 12.0186 15.335 11.7208 15.335 11.3535Z"/>
+                                    </svg>
+                                </button>
+                            </div>
                             <div class="input-actions-right">
                                 <select id="modelSelect" class="model-select" title="Select AI Model">
                                     <option value="llama-3.1-8b-instant">🟢 Llama 3.1 8B (Latest)</option>
@@ -350,6 +358,12 @@
                                 </select>
                                 <button class="mic-btn" id="micBtn" title="Voice input">
                                     <i class="fas fa-microphone"></i>
+                                </button>
+                                <!-- Voice mode button for desktop - positioned after mic button -->
+                                <button class="voice-mode-btn desktop-voice-btn" id="voiceModeBtnDesktop" title="Voice mode">
+                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                                        <path d="M7.33496 15.5V4.5C7.33496 4.13275 7.63275 3.83499 8 3.83496C8.36727 3.83496 8.66504 4.13273 8.66504 4.5V15.5C8.66504 15.8673 8.36727 16.165 8 16.165C7.63275 16.165 7.33496 15.8673 7.33496 15.5ZM11.335 13.1309V7.20801C11.335 6.84075 11.6327 6.54298 12 6.54297C12.3673 6.54297 12.665 6.84074 12.665 7.20801V13.1309C12.665 13.4981 12.3672 13.7959 12 13.7959C11.6328 13.7959 11.335 13.4981 11.335 13.1309ZM3.33496 11.3535V8.81543C3.33496 8.44816 3.63273 8.15039 4 8.15039C4.36727 8.15039 4.66504 8.44816 4.66504 8.81543V11.3535C4.66504 11.7208 4.36727 12.0186 4 12.0186C3.63273 12.0186 3.33496 11.7208 3.33496 11.3535ZM15.335 11.3535V8.81543C15.335 8.44816 15.6327 8.15039 16 8.15039C16.3673 8.15039 16.665 8.44816 16.665 8.81543V11.3535C16.665 11.7208 16.3673 12.0186 16 12.0186C15.6327 12.0186 15.335 11.7208 15.335 11.3535Z"/>
+                                    </svg>
                                 </button>
                             </div>
                         </div>
@@ -661,6 +675,61 @@
                     <button class="btn primary-btn" id="startChattingBtn">
                         Start Chatting
                     </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Voice Mode Modal -->
+    <div class="modal-overlay" id="voiceModeModal">
+        <div class="modal-container voice-mode-modal">
+            <div class="voice-mode-header">
+                <div class="voice-mode-status" id="voiceModeStatus">
+                    <span class="status-text">Voice Mode</span>
+                    <span class="status-indicator" id="statusIndicator">Ready</span>
+                </div>
+                <button class="voice-mode-close" id="voiceModeClose" title="End voice mode">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="voice-mode-body">
+                <!-- Central Voice Animation -->
+                <div class="voice-animation-container">
+                    <div class="voice-orb" id="voiceOrb">
+                        <div class="orb-inner">
+                            <div class="voice-waves" id="voiceWaves">
+                                <div class="wave-ring"></div>
+                                <div class="wave-ring"></div>
+                                <div class="wave-ring"></div>
+                            </div>
+                            <div class="voice-avatar">
+                                <i class="fas fa-robot"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Voice Mode Messages - Hidden for cleaner UI -->
+                <div class="voice-messages-container" id="voiceMessagesContainer" style="display: none;">
+                    <div class="voice-messages" id="voiceMessages">
+                        <!-- Voice conversation messages will appear here -->
+                    </div>
+                </div>
+
+                <!-- Voice Mode Controls -->
+                <div class="voice-mode-controls">
+                    <button class="voice-control-btn end-btn" id="voiceModeEndBtn" title="End voice mode">
+                        <span>End</span>
+                    </button>
+                    <button class="voice-control-btn mute-btn" id="voiceMuteMicBtn" title="Turn off microphone">
+                        <i class="fas fa-microphone-slash"></i>
+                    </button>
+                </div>
+
+                <!-- Voice Mode Info -->
+                <div class="voice-mode-info">
+                    <p class="voice-info-text">More time with voice</p>
                 </div>
             </div>
         </div>
