--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -40,6 +40,10 @@
     <!-- Google Adsense -->
     <meta name="google-adsense-account" content="ca-pub-1178405148130113">
 
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="upBWjLz2WyzNX61wGZ5zMT1dxQtWHtiltxl8MyYN20E" />
+    <meta name="google-site-verification" content="zB6GcCt1AW09iFthg2PTOuJk0xignUSqiJ9YOgAA92g" />
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1178405148130113"
         crossorigin="anonymous">
         </script>
